# JiPP2

./: CMakeLists.txt  ProjektKoncowy.sln  README.md  data.csv  main.cpp
ConstStatic/Zad1/: zad1.cpp
ConstStatic/Zad2/: zad2.cpp
ConstStatic/include/: include.h
KonstruktoryKopiujace/Zad1/include/: Point.h
KonstruktoryKopiujace/Zad1/src/: Point.cpp  main.cpp
KonstruktoryKopiujace/Zad2/: zad2.cpp
KonstruktoryKopiujace/include/: konstruktory.h
MatrixTest/src/: TimeMeasure.cpp
Operatory/include/: operatorsInclude.h
Operatory/src/: vector.cpp
ProjektKoncowy/: Angle.cpp  Angle.h  ArgumentValues.cpp  ArgumentValues.h  ArgumentsInterpreter.cpp  ArgumentsInterpreter.h  Ball.cpp  Ball.h  BallsManager.cpp  BallsManager.h  CppCLR_WinformsProjekt.cpp  Drawable.cpp  Drawable.h  Form1.h  Form2.h  Form2.resx  IOBinaryManager.cpp  IOBinaryManager.h  IOException.cpp  IOException.h  ProjektKoncowy.vcxproj  ProjektKoncowy.vcxproj.filters  Range.cpp  Range.h  RunSettings.cpp  RunSettings.h  Vector.cpp  Vector.h
include/: calc.h  csv_lib.h  include.h  lib.h  matrixLib.h  node.h  triangle.h
matrixApp/: CMakeLists.txt  main.cpp
matrixApp/src/: main.cpp
matrixLib/: CMakeLists.txt  matrixLib.cpp
matrixLib/include/: matrixLib.h
src/: Bledy.cpp  ImaginaryNumber.cpp  PrzeciazanieFunkcji.cpp  Tablice.cpp  Wskazniki.cpp  calc.cpp  csv_CSVReader.cpp  csv_lib.cpp  destruktory.cpp  klasy.cpp  konstruktory.cpp  main.cpp  node.cpp  struktury.cpp  triangle.cpp  vector.cpp
